--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-infinite-scroll-component": "^6.1.0",
-    "vercel": "^33.4.1"
+    "vercel": "^33.4.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
