--- a/package.json
+++ b/package.json
@@ -16,21 +16,33 @@
     "@heroicons/react": "^2.1.1",
     "@tanstack/react-query": "^5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
+    "@types/react-lazy-load-image-component": "^1.6.3",
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
     "moment": "^2.30.1",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-player": "^2.14.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.22.0",
+    "react-slick": "^0.30.1",
+    "react-stick": "^5.0.3",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.6",
     "vercel": "^33.4.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^3.1.0",
+    "sass": "^1.70.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
