--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.1.1",
-    "@tanstack/react-query": "^5.18.1",
+    "@react-spring/three": "^9.7.3",
+    "@react-three/drei": "^9.97.5",
+    "@react-three/fiber": "^8.15.16",
+    "@tanstack/react-query": "^5.20.5",
     "@tanstack/react-query-devtools": "^5.18.1",
     "@types/react-lazy-load-image-component": "^1.6.3",
+    "@types/three": "^0.161.2",
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
     "moment": "^2.30.1",
     "node-fetch": "^2.7.0",
     "react": "^18.2.0",
+    "react-background-video-player": "^1.1.8",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
@@ -31,9 +36,13 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.0",
     "react-slick": "^0.30.1",
+    "react-spring": "^9.7.3",
     "react-stick": "^5.0.3",
+    "react-three": "^0.9.7",
+    "shadergradient": "^1.2.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
+    "three": "^0.161.0",
     "vercel": "^33.4.1",
     "zustand": "^4.5.0"
   },
